[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "openai>=2.0.0",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "xgboost>=3.0.5",
]
